--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,98 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+input:focus,
+input:valid{
+    background-color: #ff0000;
+}
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #545151; /* Preto para o fundo da página */
-    color: #fff; /* Branco para o texto geral */
+    background-color: #0a0808;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
 }
 
 .container {
-    background-color: #333; /* Cinza escuro para o fundo do container */
-    padding: 20px;
+    display: flex;
+    width: 80%;
+    max-width: 1000px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.642);
+    background-color: #000000;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(255, 0, 0, 0.5); /* Sombra vermelha para destacar o container */
-    width: 300px;
-    text-align: center;
+    overflow: hidden;
 }
 
-h1 {
+.left-section {
+    background-color: #7d7d7c;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-section img {
+    width: 100%;
+    height: 100%;
+}
+
+.right-section {
+    padding: 30px;
+    width: 50%;
+}
+
+h2 {
     margin-bottom: 20px;
-    color: #b6b6b6; /* Cinza claro para o título */
+    font-size: 24px;
+    color: #ff0000;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
 }
 
 .input-group {
     margin-bottom: 15px;
 }
 
-.input-group label {
-    display: block;
-    font-weight: bold;
+label {
+    font-size: 14px;
+    color: #565656;
     margin-bottom: 5px;
-    color: #ff0000; /* Vermelho para o rótulo dos campos */
+    display: block;
 }
 
-.input-group input {
+input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ff0000; /* Vermelho para a borda dos campos */
+    font-size: 14px;
+    border: 1px solid #424242;
     border-radius: 4px;
-    background-color: #000; /* Preto para o fundo dos campos de entrada */
-    color: #fff; /* Branco para o texto dos campos de entrada */
-    box-sizing: border-box; /* Inclui o padding e a borda no cálculo da largura total */
 }
 
-#resultado {
+.radio-group {
+    display: flex;
+    gap: 10px;
+    margin-top: 5px;
+}
+
+button {
+    padding: 12px;
+    font-size: 16px;
+    background-color: #000000;
+    color: #0a0909;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
     margin-top: 20px;
-    font-size: 1.2em;
-    color: #ff0000; /* Vermelho para o resultado que aparecer */
 }
 
-@media (max-width: 400px) {
-    .container {
-        width: 90%; /* Ajusta a largura do container em telas menores */
-    }
-    
-    .input-group input {
-        font-size: 0.9em; /* Reduz o tamanho da fonte para campos de entrada em dispositivos menores */
-    }
-    
-    h1 {
-        font-size: 1.5em; /* Ajusta o tamanho da fonte do título em dispositivos menores */
-    }
+button:hover {
+    background-color: #b30000;
 }
